--- a/gradiente.html
+++ b/gradiente.html
@@ -53,9 +53,11 @@
         </div>
       </nav>
                         
+<!--Linear-->
+      
     <div class="linear_grad"> 
         <h1 class="títulos"> 
-            Gradientes lineares
+            <i>Gradientes lineares</i>
         </h1>
     </div>
                                              <!--tipos de gradientes-->
@@ -102,8 +104,63 @@
         </h1>
     </div>
 
-   
+<!--Radial-->
 
+    <div class="radial_grad">
+      <h1 class="títulos"> 
+        <i>Gradientes radiais</i>
+      </h1>
+    </div>
+
+                                             <!--tipos de gradientes-->
+
+     <div class="inicio_radial">
+      <h1 class="títulos"> 
+        Você escolhe
+      </h1>
+    </div> 
+
+    <div class="forma_radial">
+      <h1 class="títulos"> 
+        elipse
+      </h1>
+    </div>
+
+    <div class="forma2_radial">
+      <h1 class="títulos"> 
+        circular
+      </h1>
+    </div>
+
+    <div class="posição_radial">
+      <h1 class="títulos"> 
+        closest
+      </h1>
+    </div>
+
+    <div class="posição2_radial">
+      <h1 class="títulos"> 
+        farthest
+      </h1>
+    </div>
+
+    <div class="posição3_radial">
+      <h1 class="títulos"> 
+        closest corner
+      </h1>
+    </div>
+
+    <div class="posição4_radial">
+      <h1 class="títulos"> 
+        farthest corner
+      </h1>
+    </div>
+
+    <div class="repeat_radial">
+      <h1 class="títulos"> 
+        Repetição
+      </h1>
+    </div>
 
 
 
