--- a/index.html
+++ b/index.html
@@ -31,10 +31,7 @@
             <a class="nav-link" href="gradiente.html">Gradiente</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Contadores</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Transformações</a>
+            <a class="nav-link" href="transformacoes.html">Transformações</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Filtros</a>
@@ -45,6 +42,7 @@
           <li class="nav-item">
             <a class="nav-link" href="#">Animações</a>
           </li>
+          
 
          
         </ul>
