--- a/filtros.html
+++ b/filtros.html
@@ -3,7 +3,7 @@
 <meta charset="utf-8">
     <head>
         <title>
-            Tranformações
+            filtros
         </title>
         <link rel="stylesheet" href="estilo.css">
         <link rel="stylesheet" href= "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
@@ -11,7 +11,9 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js" integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js" integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc" crossorigin="anonymous"></script>
-    </head>   
+        <link rel="stylesheet" href="https://cssgram-cssgram.netdna-ssl.com/cssgram.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/cssgram/0.1.10/cssgram.min.css">
+    </head>
 <body>
 
     <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #A9A9A9	;">
@@ -50,46 +52,21 @@
           </div>
         </div>
       </nav>
-    
-<!--tranformações-->
 
-<div class="translate">
-    <h1 class="títulos">
-        efeito translate
-    </h1>
-</div>
+    <div class="alinhamento">
+      <img class="imgfiltro" src="img/imagemflor.jpg" alt="florzinha">
+      <img class="imgblur" src="img/imagemflor.jpg" alt="florzinha">
+      <img class="imgbrigthness" src="img/imagemflor.jpg" alt="florzinha">
+      <img class="imgcontrast" src="img/imagemflor.jpg" alt="florzinha">
+      <img class="imgdropshadow" src="img/imagemflor.jpg" alt="florzinha">
+      <img class="imggreyscale" src="img/imagemflor.jpg" alt="florzinha">
+      <img class="imghuerotate" src="img/imagemflor.jpg" alt="florzinha">
+      <img class="imginvert" src="img/imagemflor.jpg" alt="florzinha">
+      <img class="imgopacity" src="img/imagemflor.jpg" alt="florzinha">
+      <img class="imgsaturate" src="img/imagemflor.jpg" alt="florzinha">
+      <img class="imgsepia" src="img/imagemflor.jpg" alt="florzinha">
+      <img class="lofi" src="img/imagemflor.jpg" alt="florzinha">
+    </div>
 
-<div class="rotate">
-    <h1 class="títulos">
-        efeito rotate
-    </h1>
-</div>
-
-<div class="rotate_properties"> <!--muda o ponto principal onde vai girar-->
-    <h1 class="títulos">
-        efeito rotate right bottom
-    </h1>
-</div>
-
-<div class="scale">
-    <h1 class="títulos">
-        efeito escale
-    </h1>
-</div>
-
-<div class="skew">
-    <h1 class="títulos">
-        efeito skew
-    </h1>
-</div>
-
-<div class="matrix">
-    <h1 class="títulos">
-        efeito matrix
-    </h1>
-</div>
-
-
-
-</body> 
+</body>
 </html>
