--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <a class="nav-link" href="transformacoes.html">Transformações</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Filtros</a>
+            <a class="nav-link" href="filtros.html">Filtros</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Transições</a>
