--- a/gradiente.html
+++ b/gradiente.html
@@ -28,10 +28,10 @@
                 <a class="nav-link" href="gradiente.html">Gradiente</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Transformações</a>
+                <a class="nav-link" href="transformacoes.html">Transformações</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Filtros</a>
+                <a class="nav-link" href="filtros.html">Filtros</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Transições</a>
